generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// User context read model — NOT the source of truth.
// Rebuilt from EventStoreDB events.
// No password hash — that belongs to Auth context.
model User {
  id        String    @id @db.Uuid
  email     String    @unique @db.VarChar(255)
  username  String    @unique @db.VarChar(30)
  isActive  Boolean   @default(true) @map("is_active")
  createdAt DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  createdBy String?   @map("created_by") @db.Uuid
  updatedAt DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)
  updatedBy String?   @map("updated_by") @db.Uuid
  deletedAt DateTime? @map("deleted_at") @db.Timestamptz(6)
  deletedBy String?   @map("deleted_by") @db.Uuid

  @@map("users")
}

// Auth context — denormalized credentials for fast login lookup.
model AuthCredential {
  userId       String    @id @map("user_id") @db.Uuid
  email        String    @unique @db.VarChar(255)
  username     String    @unique @db.VarChar(30)
  passwordHash String    @map("password_hash") @db.VarChar(255)
  isActive     Boolean   @default(true) @map("is_active")
  lastLoginAt  DateTime? @map("last_login_at") @db.Timestamptz(6)
  createdAt    DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  createdBy    String?   @map("created_by") @db.Uuid
  updatedAt    DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)
  updatedBy    String?   @map("updated_by") @db.Uuid
  deletedAt    DateTime? @map("deleted_at") @db.Timestamptz(6)
  deletedBy    String?   @map("deleted_by") @db.Uuid

  @@map("auth_credentials")
}

// Event store — append-only log of domain events.
// Replaces EventStoreDB with a PostgreSQL-backed event store.
model DomainEvent {
  id         String   @id @db.Uuid
  streamId   String   @map("stream_id") @db.VarChar(255)
  eventType  String   @map("event_type") @db.VarChar(100)
  payload    Json
  version    BigInt
  occurredAt DateTime @map("occurred_at") @db.Timestamptz(6)

  @@unique([streamId, version])
  @@index([streamId])
  @@map("domain_events")
}
